# linear-system-solver

./: Makefile  README.md  pyproject.toml  setup.py
src/solverlib/: gauss_seidel.c  gauss_seidel.h  jacobi.c  jacobi.h  solverlib.c
src/test/: test_gauss_seidel.c  test_jacobi.c  test_solver.py
